# loris

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
src/: attributes.rs  definition.rs  evaluation.rs  expression.rs  formatting.rs  interfaces.rs  lib.rs  log.rs  string.rs
src/atoms/: expression.rs  mexpression.rs  mod.rs  string.rs  symbol.rs
src/data_structures/: hash.rs  mod.rs
src/matching/: mod.rs  parse_pattern.rs
