[package]
name = "loris"
version = "0.1.0"
authors = ["Robert Jacobson <rljacobson@gmail.com>"]
edition = "2018"
description = "A term rewriting system with powerful pattern matching capabilities."
categories = ["algorithms", "compilers", "parsing", "mathematics"]
keywords = ["computer algebra", "Mathematica", "pattern matching", "term rewriting"]
website = "http://www.github.com/rljacobson/loris"
repository = "http://www.github.com/rljacobson/loris"
license = "BSD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.23", features = ["derive"] }
strum_macros = "0.23"
fnv = { version = "1"}
